# ngraph

./: CMakeLists.txt  CMakeSettings.json
cmake/: clang_4_0_flags.cmake  external_eigen.cmake  external_gtest.cmake  external_llvm.cmake  external_mkldnn.cmake
cmake/Modules/: find_header_search_path.cmake  get_header_search_paths.cmake  header_search.cpp
doc/examples/: CMakeLists.txt  abc.cpp  layers.cpp  layers.hpp  mnist.cpp  mnist.hpp  mnist_mlp.cpp  tensor_utils.hpp
doc/sphinx/source/: framework-integration-guides.rst  glossary.rst  index.rst  install.rst  installation.rst
doc/sphinx/source/howto/: derive-for-training.rst  fuse.rst  handle.rst  index.rst  mnist_mlp.rst  update.rst
doc/sphinx/source/ops/: index.rst
doc/sphinx/source/project/: doc-contributor-README.rst  release-notes.rst
python/pyngraph/: util.cpp
src/: CMakeLists.txt
src/ngraph/: CMakeLists.txt  file_util.cpp  file_util.hpp  function.hpp  graph_util.cpp  graph_util.hpp  log.hpp  ngraph.cpp  ngraph.h  ngraph.hpp  node.cpp  node.hpp  placement.cpp  placement.hpp  serializer.cpp  util.cpp
src/ngraph/builder/: xla_tuple.cpp  xla_tuple.hpp
src/ngraph/codegen/: CMakeLists.txt  code_writer.cpp  code_writer.hpp  compiler.cpp  compiler.hpp  execution_engine.cpp  execution_engine.hpp
src/ngraph/frontend/onnx_import/: CMakeLists.txt  onnx_util.cpp  onnx_util.hpp  value_info.cpp  value_info.hpp
src/ngraph/op/: abs.cpp  abs.hpp  acos.cpp  acos.hpp  add.cpp  add.hpp  allreduce.hpp  asin.cpp  asin.hpp  atan.cpp  atan.hpp  avg_pool.hpp  batch_norm.cpp  batch_norm.hpp  broadcast.hpp  ceiling.cpp  ceiling.hpp  concat.hpp  constant.hpp  convert.hpp  convolution.cpp  convolution.hpp  cos.hpp  cosh.hpp  divide.hpp  dot.hpp  equal.cpp  equal.hpp  exp.hpp  floor.cpp  floor.hpp  function_call.hpp  get_output_element.hpp  greater.cpp  greater.hpp  greater_eq.cpp  greater_eq.hpp  less.cpp  less.hpp  less_eq.cpp  (+46 more)
src/ngraph/op/util/: arithmetic_reduction.cpp  binary_elementwise.cpp  binary_elementwise_arithmetic.cpp  binary_elementwise_comparison.cpp  unary_elementwise.cpp  unary_elementwise_arithmetic.cpp  unary_elementwise_arithmetic.hpp
src/ngraph/ops/: parameter.cpp  parameter.hpp  relu.hpp
src/ngraph/pattern/op/: pattern.hpp
src/ngraph/runtime/: backend.cpp  backend.hpp  tensor_view.cpp  tensor_view.hpp
src/ngraph/runtime/cpu/: CMakeLists.txt  cpu_backend.cpp  cpu_call_frame.cpp  cpu_eigen_utils.hpp  cpu_emitter.cpp  cpu_emitter.hpp  cpu_external_function.cpp  cpu_external_function.hpp  cpu_mkldnn_utils.hpp  cpu_runtime_context.hpp  mkldnn_utils.cpp
src/ngraph/runtime/cpu/op/: conv_add.cpp  conv_add.hpp  conv_bias.cpp  conv_bias.hpp  convert_layout.hpp  matmul_bias.cpp  matmul_bias.hpp  sigmoid.cpp  sigmoid.hpp
src/ngraph/runtime/cpu/pass/: cpu_assignment.cpp  cpu_fusion.cpp  cpu_fusion.hpp  cpu_layout.cpp
src/ngraph/runtime/gpu/: CMakeLists.txt  gpu_backend.cpp
src/ngraph/runtime/intelgpu/: intelgpu_backend.cpp
src/ngraph/runtime/interpreter/: int_backend.cpp
src/ngraph/runtime/kernel/: relu.hpp
src/ngraph/type/: element_type.cpp  element_type.hpp
src/resource/: CMakeLists.txt  file_util.hpp  find_headers.cpp  find_headers.hpp  find_headers_used.cpp  find_headers_used.hpp  header_info.hpp  main.cpp
src/resource/header_tools/: CMakeLists.txt  collect_headers.cpp  collect_headers.hpp  compiler.cpp  compiler.hpp  file_util.cpp  header_rewrite.cpp  header_rewrite.hpp  uncomment.cpp  util.cpp  util.hpp
src/tools/compile_benchmark/: CMakeLists.txt
src/tools/nbench/: CMakeLists.txt  benchmark.cpp  benchmark.hpp  nbench.cpp
test/: CMakeLists.txt  argon_fusion.cpp  autodiff.in.cpp  backend_debug_api.cpp  backend_performance.cpp  backend_test.in.cpp  build_graph.cpp  builder.cpp  builder_xla.cpp  copy.cpp  core_fusion.cpp  cpu_fusion.cpp  fputil.cpp  inliner.cpp  input_output_assign.cpp  ngraph.cpp  onnx_import.cpp  op.cpp  pass_manager.cpp  pattern.cpp  resource.cpp  serialize.cpp  tensor.cpp  type_prop.cpp  util.cpp  util.hpp
test/models/mxnet/: BpropBatchnormTest.json
test/ref_generators/: generate_convolution_ref.py
test/util/: CMakeLists.txt  benchmark.cpp  fputil.hpp  test_tools.cpp
test/util/autodiff/: backprop_derivative.hpp  backprop_function.cpp  numeric_compare.hpp
